hphp/hack/test/typecheck/expression_trees/interpolated_string.php.exp
File "interpolated_string.php", line 10, characters 7-19:
Unsupported expression tree syntax. (Parsing[1002])
